# factory-rust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: tests.yml
contract/: Cargo.toml  README.md  build.sh
contract/donation-contract/: Cargo.toml
contract/donation-contract/src/: lib.rs
contract/donation-factory/: Cargo.toml
contract/donation-factory/src/: lib.rs
contract/src/: deploy.rs  lib.rs  manager.rs
frontend/: package-lock.json
integration-tests/src/: main.ava.ts
src/: deploy.rs  deploy_as_global_account_id.rs  deploy_as_global_hash.rs  lib.rs  manager.rs
src/ft-contract/: ft.wasm
src/status-message-contract/: status_message.wasm
tests/: sandbox.rs  workspaces.rs
