[package]
name = "factory-contract-global"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.5.7"
near-sdk = { version = "5.17.1", features = ["global-contracts", "unstable"] }

[dev-dependencies]
near-sdk = { version = "5.17.1", features = ["global-contracts", "unit-testing"] }
near-workspaces = { version = "0.21", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
